# worca-cc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_tool_use.py  pre_tool_use.py  subagent_start.py  user_prompt_submit.py
.claude/scripts/: run_learn.py  run_multi_project.py  run_parallel.py  run_pipeline.py  worca.py
.claude/worca-ui/: package-lock.json  package.json  playwright.config.js
.github/workflows/: test-e2e.yml  test.yml
docs/: IDEAS.md
docs/plans/: 2026-03-09-pipeline-stage-editor-design.md  2026-03-09-pipeline-stage-editor.md  2026-03-09-settings-page.md  W-000-settings-rest-api.md  (+29 more)
tests/: test_agent_telemetry.py  test_batch.py  test_bd_create_hook.py  test_beads.py  test_beads_init.py  test_circuit_breaker_exception.py  test_claude_cli.py  test_cleanup_policy.py  test_control.py  test_control_webhook_handling.py  test_e2e_w027.py  test_error_classifier.py  test_event_emitter.py  test_event_types.py  test_events.py  test_formatting.py  test_gh_issues.py  test_git.py  test_git_worktree.py  test_guard.py  test_hook_emitter.py  test_hook_governance_events.py  test_iteration_resume.py  test_multi_pipeline.py  test_orchestrator_events.py  test_overlay.py  test_plan_check.py  test_plan_file_location.py  test_plan_review_schema.py  test_plan_reviewer_agent.py  test_preflight_checks.py  test_project_registry.py  test_prompt.py  test_prompt_builder.py  test_prompt_builder_context_persistence.py  test_prompt_builder_learn.py  test_registry.py  test_resume.py  test_run_id.py  test_run_learn_script.py  (+28 more)
(+185 files in other folders)
